# whython-7

./: - c2.why  Cargo.toml  README.md  a.out  assembly details.txt  currently working  main - c.why  main - old.why  main.why  out.asm  output\out.asm  parse_test.why  reference implementation.txt  test.why  types.toml
.fleet/: run.json
output/: out.asm
src/: main.rs  root.rs  utils.rs
src/assembler/: assemble.rs  default.rs  mod.rs
src/ast/: builtin.rs  keywords.rs  literals.rs  mod.rs  operators.rs  symbol.rs
src/basic_ast/: mod.rs  punctuation.rs  symbol.rs
src/compiler/: compile_functions.rs  custom_functions.rs  default.rs  generate_asm.rs  mod.rs
src/compiler/compile_functions/: assignment.rs  call_function.rs  evaluate.rs  evaluate_symbol.rs  instantiate_literal.rs  name_handler.rs  operators.rs  process_lines.rs
src/custom/: bool.rs  int.rs
src/il/: symbol.rs
src/parser/: escape_codes.rs  file_reader.rs  initialiser_parser.rs  line_info.rs  mod.rs  normal_parser.rs  parse.rs  string_parser.rs
src/processor/: custom_functions.rs  custom_types.rs  function_processor.rs  mod.rs  preprocess.rs  processor.rs  type_builder.rs  user_type.rs
src/root/: runner.rs  utils.rs
src/root/assembler/: assemble.rs
src/root/ast/: literals.rs
src/root/basic_ast/: symbol.rs
src/root/compiler/: compile_functions.rs  custom_functions.rs  generate_asm.rs  mod.rs
src/root/custom/: bool.rs  float.rs  get.rs  int.rs  mod.rs
src/root/nom_parser/: mod.rs  parse.rs  parse_blocks.rs  parse_fn.rs  parse_impl.rs  (+3 more)
tests/: tests.rs
tests/inputs/: asd
(+21 files in other folders)
