[package]
name = "whython-7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
thiserror = "1.0.56"
itertools = "0.12.1"
bitflags = "2.4.2"
bytes = "1.5.0"
strum = "0.26.1"
strum_macros = "0.26.1"
unique-type-id = "1.3.0"
either = "1.9.0"
lazy_static = "1.4.0"
b-box = "0.1.0"
