[package]
name = "whython-7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
thiserror = "1.0.57"
itertools = "0.12.1"
strum = "0.26.1"
strum_macros = "0.26.1"
unique-type-id = "1.3.0"
either = "1.9.0"
lazy_static = "1.4.0"
b-box = "0.1.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"